--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@measured/puck": "^0.15.0",
+    "@prisma/client": "^5.16.1",
     "classnames": "^2.3.2",
     "next": "^13.5.2",
     "react": "^18.2.0",
@@ -20,6 +21,7 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "eslint-config-custom": "*",
+    "prisma": "^5.16.1",
     "typescript": "^4.5.3"
   }
 }
