new database connection string

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://my_dune_owner:QZr5lODe2ncd@ep-crimson-mountain-a5jhljtg-pooler.us-east-2.aws.neon.tech/my_dune?sslmode=require"
+# uncomment next line if you use Prisma <5.10
+# DATABASE_URL_UNPOOLED="postgresql://my_dune_owner:QZr5lODe2ncd@ep-crimson-mountain-a5jhljtg.us-east-2.aws.neon.tech/my_dune?sslmode=require"
