--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@measured/puck": "^0.15.0",
     "@prisma/client": "^5.16.1",
     "classnames": "^2.3.2",
-    "next": "^13.5.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "eslint-config-next": "^14.2.4",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
